--- a/src/cv.css
+++ b/src/cv.css
@@ -59,7 +59,7 @@ body:before {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(255,255,255,0.92);
+  background-color: #f5f5f5;
 }
 .caps {
   text-transform: uppercase;
@@ -211,9 +211,13 @@ h3 {
   line-height: 28px;
 }
 /* Create two equal columns that floats next to each other */
-.column {
+.columnLeft {
   float: left;
-  width: 50%;
+  width: 40%;
+}
+.columnRight {
+  float: left;
+  width: 60%;
 }
 /* Clear floats after the columns */
 .row:after {
